--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -3,10 +3,10 @@
   <link rel="stylesheet" href="css/bootstrap.min.css"/>
   <link rel="stylesheet" type="text/css" href="css/footer.css" />
   <script language="javascript" src="js/bootstrap.min.js"></script>
-  <script src="/jquery/dist/jquery.min.js"></script>
+  <script language="javascript" src="/jquery/dist/jquery.min.js"></script>
 </head>
 
-<div class="iconsBar">
+<div class="container-fluid iconsBar">
   <div class="columnTwo">
     <span><i class="fa fa-github fa-2x" aria-hidden="true"></i></span>
   </div>
@@ -14,7 +14,7 @@
     <span><i class="fa fa-free-code-camp fa-2x" aria-hidden="true"></i></span>
   </div>
   <div class="columnSix">
-    <span><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></span>
+    <span><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></span>
   </div>
   <div class="developedBy">
     <span>Created by Steven Dilbert {{getCurrentYear}}</span>
