--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -8,10 +8,10 @@
 </head>
 
 <div class="container-fluid">
-  <nav class="navbar navbar-dark navbar-expand-md container-fluid">
+  <nav class="navbar navbar-expand-md container-fluid">
     <a class-"navbar-brand" href="/">
       <span class="devName">Steven Dilbert</span>
-      <span class="devName jobTitle">|  Full Stack Web Developer</span>
+      <span class="devName jobTitle">| Full Stack Web Developer</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
       data-target="#navbarResponsive" aria-controls="navbarResponsive"
