--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,15 +1,5 @@
-body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-.app {
-  background-image: url("./img/bg.jpg");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  box-shadow: inset 0 0 0 1000px rgba(50, 70, 155, .6);
+h4 {
+  text-align: justify;
 }
 
 .contentContainer {
@@ -24,6 +14,37 @@ body {
     "sidebarLeft  content   sidebarRight"
     "sidebarLeft  content   sidebarRight"
     "footer       footer    footer"
+}
+
+.container {
+  display: grid;
+  grid-gap: 0px;
+  grid-template-columns: 8fr 1fr 3fr;
+  grid-template-rows: auto;
+  height: 100%;
+  grid-template-areas:
+    "description . profilePicture"
+}
+
+.description {
+  grid-area: description;
+  display: block;
+  margin: auto;
+}
+
+.profilePicture {
+  grid-area: profilePicture;
+  display: block;
+  margin: auto;
+}
+
+img {
+  max-width:100%;
+  max-height: auto;
+}
+
+p {
+  text-align: center;
 }
 
 .navMenu {
@@ -44,35 +65,8 @@ body {
 }
 
 .content {
-  padding-top: 20px;
   grid-area: content;
-}
-
-.welcome {
-  color: white;
-  text-align: center;
-  font-size: 60px;
-  font-weight: 500;
-  margin-top: 5vh;
-}
-
-.clickBelow {
-  color: white;
-  display: block;
-  max-width: 90vw;
-  text-align: center;
-  font-size: 30px;
-  margin: 6vh auto;
-}
-
-#enter {
-  text-transform: uppercase;
-  background-color: transparent;
-  font-size: 30px;
-  color: white;
-  border: 2px solid white;
-  padding: 20px;
-  margin: auto;
+  height: 100%;
 }
 
 .sidebarRight {
@@ -81,17 +75,14 @@ body {
 
 .footer {
   grid-area: footer;
-  background: #322a61;
+  background-color: #322a61;
 }
+
 
 
 @media (max-width: 768px) {
 
   .contentContainer {
-    background-image: url("./img/bgMobile.jpg");
-    background-repeat: no-repeat;
-    box-shadow: inset 0 0 0 1000px rgba(50, 70, 155, .6);
-    background-size: 100% 100%;
     display: grid;
     grid-gap: 0;
     grid-template-columns: 12fr;
@@ -115,17 +106,3 @@ body {
   .content {
     width: 100vw;
   }
-
-  .welcome {
-    margin-top: 1vh;
-    font-size: 7vw;
-  }
-
-  .clickBelow {
-    font-size: 5vw;
-  }
-
-  #enter {
-    font-size: 5vw;
-  }
-}
