--- a/public/css/app.css
+++ b/public/css/app.css
@@ -51,7 +51,7 @@ body {
 .welcome {
   color: white;
   text-align: center;
-  font-size: 60px;
+  font-size: 70px;
   font-weight: 500;
   margin-top: 5vh;
 }
@@ -61,13 +61,13 @@ body {
   display: block;
   max-width: 90vw;
   text-align: center;
-  font-size: 30px;
+  font-size: 35px;
   margin: 6vh auto;
 }
 
 #enter {
   text-transform: uppercase;
-  background-color: transparent;
+  background-color: rgba(50,42,97, 0.7);
   font-size: 30px;
   color: white;
   border: 2px solid white;
