--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -22,7 +22,7 @@ body {
 .navMenu {
   grid-area: navMenu;
   margin: 0px 10px 0px;
-  background: #292b2c;
+  background: #322a61;
   height: 100%;
 }
 
@@ -40,13 +40,17 @@ body {
   grid-area: content;
 }
 
+.contactMe {
+  color: #322a61;
+}
+
 .sidebarRight {
   grid-area: sidebarRight;
 }
 
 .footer {
   grid-area: footer;
-  background-color: #292b2c;
+  background-color: #322a61;
 }
 
 
@@ -66,6 +70,9 @@ body {
       "footer"
   }
 
+  .jumbotron {
+    margin-bottom: 0rem !important;
+  }
   .navMenu {
     margin: 0;
   }
