--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -8,7 +8,7 @@
 </head>
 
 <div class="container-fluid">
-  <nav class="navbar navbar-expand-md container-fluid">
+  <nav class="navbar navbar-expand-md navbar-dark container-fluid">
     <a class-"navbar-brand" href="/">
       <span class="devName">Steven Dilbert</span>
       <span class="devName jobTitle">| Full Stack Web Developer</span>
