--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -31,7 +31,7 @@
               </div>
               <div class="form-group">
                 <label for="exampleFormControlTextarea1">What's on your mind?</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Did you really match your shirt and your hat? That's.. uhh.. bold."></textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Write me some stuff."></textarea>
               </div>
             </form>
           </div>
