placeholders and overlay completed for projects page. Added google fonts

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -33,8 +33,8 @@
                       I've been using freeCodeCamp, Udemy,
                       Udacity, and other online resources to teach myself web development.</h5>
                       <br>
-                  <h5>I've been focusing on Javascript and Python. When I'm not coding,
-                      I study Spanish at the local university.</h5>
+                  <h5>I've been focusing on HTML, CSS, Javascript (React, Node, Express), and Python. When I'm not coding,
+                      I study Spanish at the local university. </h5>
               </div>
               <div class="profilePicture">
                 <img src="css/img/profile.jpg" class="rounded-circle" alt="Decent Looking Guy">
