--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Home Page</title>
     <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/app.css" />
   </head>
@@ -22,12 +23,12 @@
               <p class="clickBelow"> I've been learning Javascript, Python, and Spanish for 7 months
                 while living abroad in Mexico.</p>
                 <div class="d-flex justify-content-center">
-                  <a class="btn" id="enter" href="/projects" size="lg" type="button">Come take a look</a>
+                  <a class="btn" id="enter" href="/projects" size="lg" type="button">Take a Look</a>
                 </div>
             </div>
           </div>
             <div class="sidebarRight">
-              <!--Add sidebarRight variable for navigation -->
+              <!--Add sideBarRight variable for navigation -->
             </div>
           <div class="footer">
             {{>footer}}
