--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -8,13 +8,16 @@
 
 <div class="container-fluid iconsBar">
   <div class="columnTwo">
-    <span><i class="fa fa-github fa-2x" aria-hidden="true"></i></span>
+    <a href="https://github.com/sdilby"><span>
+      <i class="fa fa-github fa-2x" aria-hidden="true"></i></span></a>
   </div>
   <div class="columnFour">
-    <span><i class="fa fa-free-code-camp fa-2x" aria-hidden="true"></i></span>
+    <a href="https://www.freecodecamp.org/sdilby"><span>
+      <i class="fa fa-free-code-camp fa-2x" aria-hidden="true"></i></span></a>
   </div>
   <div class="columnSix">
-    <span><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></span>
+    <a href="https://www.linkedin.com/in/sdilbert/"><span>
+      <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></span></a>
   </div>
   <div class="developedBy">
     <span>Created by Steven Dilbert {{getCurrentYear}}</span>
