--- a/views/partials/sidebarRight.hbs
+++ b/views/partials/sidebarRight.hbs
@@ -1,3 +1,7 @@
+<head>
+  <link rel="stylesheet" type="text/css" href="css/sideBarRight.css" />
+</head>
+
 <div>
   <i class="fa fa-angle-right fa-4x" aria-hidden="true"></i>
-<div>
+</div>
