--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -20,23 +20,55 @@
           <h2 class="text-center">My Projects</h2>
           <br>
           <div id="projectsGrid">
+            <a href="github.com">
+              <div class="card container">Annie Lou's Pet Sitting Service
+                <div class="overlay">
+                  <div class="text">HTML5, CSS(SASS), React, Javascript, Bootstrap</div>
+                </div>
+              </div>
+            </a>
+            <a href="github.com">
+              <div class="card container">Alien Invaders (Python Game)
+                <div class="overlay">
+                  <div class="text">Python, Pygame</div>
+                </div>
+              </div>
+            </a>
             <div>
-              {{>projectCard}}
+              <a href="github.com">
+                <div class="card container">Memory Game (Javascript Game)
+                  <div class="overlay">
+                    <div class="text">HTML5, Javascript, Jquery</div>
+                  </div>
+                </div>
+              </a>
             </div>
             <div>
-              {{>projectCard}}
+              <a href="github.com">
+                <div class="card container">Data Visualization (Python)
+                  <div class="overlay">
+                    <div class="text">MongoDB, Python, Pygal</div>
+                  </div>
+                </div>
+              </a>
             </div>
             <div>
-              {{>projectCard}}
+              <a href="github.com">
+                <div class="card container">Portfolio Page
+                  <div class="overlay">
+                    <div class="text">HTML5, CSS & CSS Grid, Node, Express, Bootstrap</div>
+                  </div>
+                </div>
+              </a>
             </div>
             <div>
-              {{>projectCard}}
-            </div>
-            <div>
-              {{>projectCard}}
-            </div>
-            <div>
-              {{>projectCard}}
+              <a href="github.com">
+                <div class="card container">Work in Progress
+                  <div class="overlay">
+                    <div class="text">Coming soon..</div>
+                  </div>
+                </div>
+              </a>
             </div>
           </div>
         </div>
