--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,11 +5,13 @@ body {
     padding: 0;
 }
 
+
 .app {
   background-image: url("./img/bg.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  box-shadow: inset 0 0 0 1000px rgba(90, 90, 155, .7);
+  box-shadow: inset 0 0 0 1000px rgba(100, 100, 155, .7);
+  font-family: 'Lora', serif;
 }
 
 .contentContainer {
@@ -51,7 +53,7 @@ body {
 .welcome {
   color: white;
   text-align: center;
-  font-size: 70px;
+  font-size: 60px;
   font-weight: 500;
   margin-top: 5vh;
 }
@@ -61,17 +63,16 @@ body {
   display: block;
   max-width: 90vw;
   text-align: center;
-  font-size: 35px;
+  font-size: 30px;
   margin: 6vh auto;
 }
 
 #enter {
-  text-transform: uppercase;
   background-color: rgba(50,42,97, 0.7);
-  font-size: 30px;
+  font-size: 25px;
   color: white;
   border: 2px solid white;
-  padding: 20px;
+  padding: 20px 40px 20px 40px;
   margin: auto;
 }
 
