--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,3 +1,7 @@
+* {
+  font-family: 'Lora', serif;
+}
+
 a{
   text-decoration: none;
   color: white;
@@ -14,8 +18,8 @@ a:visited{
 }
 
 a:hover {
-  text-decoration: none;
-  color: #7f7f7f;
+  text-decoration: none !important;
+  color: #7f7f7f !important;
 }
 
 .devName {
