--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,6 @@
 <head>
   <link rel="stylesheet" href="css/font-awesome.min.css" />
+  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css"/>
   <link rel="stylesheet" type="text/css" href="css/header.css" />
   <script language="javascript" src="js/bootstrap.min.js"></script>
