--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,6 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Free Web tutorials">
+    <meta name="keywords" content="HTML,CSS,React,Node,Express,Python,JavaScript,ES6,
+      Full Stack Web Developer, Full-Stack, Web Development, Knoxville, Junior Web Developer,
+      Jr. Web Developer, data visualization, portfolio">
+    <meta name="author" content="Steven Dilbert">
     <title>Home Page</title>
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
@@ -23,7 +28,7 @@
               <p class="clickBelow"> I've been learning Javascript, Python, and Spanish for 7 months
                 while living abroad in Mexico.</p>
                 <div class="d-flex justify-content-center">
-                  <a class="btn" id="enter" href="/projects" size="lg" type="button">Take a Look</a>
+                  <a class="btn" id="enter" href="/" size="lg" type="button">Take a Look</a>
                 </div>
             </div>
           </div>
