--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -20,18 +20,21 @@
           <div class="container">
             <h1 class="text-center text-uppercase font-bold contactMe">contact me</h1>
             <p class="text-center font-italic">If my internet works, I'll email you back. Gracias.</p>
-            <form>
+            <form action="/contact" id="contact-form" method="POST" role="form">
               <div class="form-group">
-                <label for="exampleFormControlInput1">Email address</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <label for="email">Email address</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com" required="required">
               </div>
               <div class="form-group">
-                <label for="exampleFormControlInput1">Email subject</label>
-                <input type="subject" class="form-control" id="exampleFormControlInput1" placeholder="Can I offer you a job?">
+                <label for="subject">Email subject</label>
+                <input type="subject" class="form-control" id="subject" name="subject" placeholder="Can I offer you a job?" required="required">
               </div>
               <div class="form-group">
-                <label for="exampleFormControlTextarea1">What's on your mind?</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Write me some stuff."></textarea>
+                <label for="message">What's on your mind?</label>
+                <textarea class="form-control" id="message" name="message" rows="3" placeholder="When can you start?" required="required"></textarea>
+              </div>
+              <div class="d-flex justify-content-center">
+                <button type="submit">Submit</button>
               </div>
             </form>
           </div>
