--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -17,28 +17,33 @@
           <!--Add sidebarLeft variable for navigation -->
         </div>
         <div class="content jumbotron jumbotron-fluid">
-          <h2 class="text-center">My Projects</h2>
+          <h2 class="text-center"><u>My Projects</u></h2>
           <br>
           <div id="projectsGrid">
-            <a href="github.com">
-              <div class="card container">Annie Lou's Pet Sitting Service
-                <div class="overlay">
-                  <div class="text">HTML5, CSS(SASS), React, Javascript, Bootstrap</div>
+            <a href="https://github.com/JTP709/annieloupss">
+              <p class="card-title text-center">Annie Lou's Pet Sitting Service</p>
+                <div class="card container" id="itemOne">
+                  <div class="overlay">
+                    <div class="text">HTML5, CSS(SASS), React, Node, Javascript, Bootstrap</div>
+                  </div>
                 </div>
-              </div>
             </a>
             <a href="github.com">
-              <div class="card container">Alien Invaders (Python Game)
-                <div class="overlay">
-                  <div class="text">Python, Pygame</div>
-                </div>
+              <div>
+                <p class="card-title text-center">Alien Invaders (Python Game)</p>
+                  <div class="card container" id="itemTwo">
+                    <div class="overlay">
+                      <div class="text">Python, Pygame</div>
+                    </div>
+                  </div>
               </div>
             </a>
             <div>
-              <a href="github.com">
-                <div class="card container">Memory Game (Javascript Game)
+              <a href="#">
+                <p class="card-title text-center">Memory Game (Javascript Game)</p>
+                <div class="card container" id="itemThree">
                   <div class="overlay">
-                    <div class="text">HTML5, Javascript, Jquery</div>
+                    <div class="text">HTML5, Javascript, jQuery</div>
                   </div>
                 </div>
               </a>
@@ -56,7 +61,7 @@
               <a href="github.com">
                 <div class="card container">Portfolio Page
                   <div class="overlay">
-                    <div class="text">HTML5, CSS & CSS Grid, Node, Express, Bootstrap</div>
+                    <div class="text">HTML5, CSS & CSS Grid, ES6, Node, Express, Bootstrap</div>
                   </div>
                 </div>
               </a>
