updated server.js for contact POST route

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -27,7 +27,7 @@
               </div>
               <div class="form-group">
                 <label for="subject">Email subject</label>
-                <input type="subject" class="form-control" id="subject" name="subject" placeholder="Can I offer you a job?" required="required">
+                <input type="subject" class="form-control" id="subject" name="subject" placeholder="I like your stuff." required="required">
               </div>
               <div class="form-group">
                 <label for="message">What's on your mind?</label>
