--- a/views/home.hbs
+++ b/views/home.hbs
@@ -25,10 +25,10 @@
           <div class="content">
             <div>
               <p class="welcome"> Welcome to my portfolio page. </p>
-              <p class="clickBelow"> I've been learning Javascript, Python, and Spanish for 7 months
+              <p class="clickBelow"> I've been learning Javascript, Python, and Spanish for 8 months
                 while living abroad in Mexico.</p>
                 <div class="d-flex justify-content-center">
-                  <a class="btn" id="enter" href="/" size="lg" type="button">Take a Look</a>
+                  <a class="btn" id="enter" href="/projects" size="lg" type="button">Take a Look</a>
                 </div>
             </div>
           </div>
