--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -17,20 +17,22 @@
           <!--Add sidebarLeft variable for navigation -->
         </div>
         <div class="content jumbotron jumbotron-fluid">
-          <h2 class="text-center"><u>My Projects</u></h2>
-          <br>
+          <h2 class="text-center">My Projects</h2>
+          <hr>
           <div id="projectsGrid">
             <a href="https://github.com/JTP709/annieloupss">
-              <p class="card-title text-center">Annie Lou's Pet Sitting Service</p>
+              <div>
+                <div class="text-dark text-center font-weight-bold">Annie Lou's Pet Sitting Service</div>
                 <div class="card container" id="itemOne">
                   <div class="overlay">
-                    <div class="text">HTML5, CSS(SASS), React, Node, Javascript, Bootstrap</div>
+                    <div class="text">HTML, CSS(SASS), React, Node, Javascript, Bootstrap</div>
                   </div>
                 </div>
+              </div>
             </a>
-            <a href="github.com">
+            <a href="https://github.com/sdilby/alien_invasion">
               <div>
-                <p class="card-title text-center">Alien Invaders (Python Game)</p>
+                <div class="text-dark text-center font-weight-bold">Alien Invaders</div>
                   <div class="card container" id="itemTwo">
                     <div class="overlay">
                       <div class="text">Python, Pygame</div>
@@ -38,45 +40,48 @@
                   </div>
               </div>
             </a>
-            <div>
-              <a href="#">
-                <p class="card-title text-center">Memory Game (Javascript Game)</p>
-                <div class="card container" id="itemThree">
-                  <div class="overlay">
-                    <div class="text">HTML5, Javascript, jQuery</div>
+              <a href="https://github.com/sdilby/Memory-Game">
+                <div>
+                  <div class="text-dark text-center font-weight-bold">Memory Game</div>
+                    <div class="card container" id="itemThree">
+                      <div class="overlay">
+                        <div class="text">HTML, Javascript(ES6), jQuery</div>
+                      </div>
+                    </div>
+              </div>
+            </a>
+              <a href="https://github.com/sdilby/worldPopDataVis">
+                <div>
+                  <div class="text-dark text-center font-weight-bold">Data Visualization</div>
+                    <div class="card container" id="itemFour">
+                      <div class="overlay">
+                        <div class="text">Python, Pygal</div>
+                      </div>
                   </div>
                 </div>
               </a>
-            </div>
-            <div>
               <a href="github.com">
-                <div class="card container">Data Visualization (Python)
-                  <div class="overlay">
-                    <div class="text">MongoDB, Python, Pygal</div>
-                  </div>
+                <div>
+                  <div class="text-dark text-center font-weight-bold">Portfolio Page</div>
+                    <div class="card container" id="itemFive">
+                      <div class="overlay">
+                        <div class="text">HTML, CSS & CSS Grid, Javascript(ES6), Node, Express, Bootstrap</div>
+                      </div>
+                    </div>
                 </div>
               </a>
-            </div>
-            <div>
-              <a href="github.com">
-                <div class="card container">Portfolio Page
-                  <div class="overlay">
-                    <div class="text">HTML5, CSS & CSS Grid, ES6, Node, Express, Bootstrap</div>
+              <a href="https://github.com/sdilby/Learning_log">
+                <div>
+                  <div class="text-dark text-center font-weight-bold">Learning Log</div>
+                    <div class="card container" id="itemSix">
+                      <div class="overlay">
+                        <div class="text">HTML, Python, Django, Bootstrap</div>
+                      </div>
+                    </div>
                   </div>
-                </div>
-              </a>
-            </div>
-            <div>
-              <a href="github.com">
-                <div class="card container">Work in Progress
-                  <div class="overlay">
-                    <div class="text">Coming soon..</div>
-                  </div>
-                </div>
               </a>
             </div>
           </div>
-        </div>
           <div class="sidebarRight">
             <!--Add sidebarRight variable for navigation -->
           </div>
