--- a/public/css/app.css
+++ b/public/css/app.css
@@ -61,9 +61,9 @@ body {
 .clickBelow {
   color: white;
   display: block;
-  max-width: 90vw;
+  max-width: 100%;
   text-align: center;
-  font-size: 30px;
+  font-size: 25px;
   margin: 6vh auto;
 }
 
